<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImplicitIntents">

    <EditText
        android:id="@+id/idEtWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:autofillHints="url"
        android:ems="10"
        android:hint="@string/hint_enter_web"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="openWeb"
        android:text="@string/open_web" />

    <EditText
        android:id="@+id/idEtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:autofillHints="location"
        android:ems="10"
        android:hint="@string/hint_enter_location"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="openMap"
        android:text="@string/open_map" />

    <EditText
        android:id="@+id/idEtMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:autofillHints="message"
        android:ems="10"
        android:hint="@string/hint_enter_message"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="shareMsg"
        android:text="@string/share" />


</LinearLayout>