<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EasyCalculate">

    <EditText
        android:id="@+id/idEtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/enter_num_1"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/idEtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/enter_num_2"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEtNum1"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/idBtnCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="add"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEtNum2"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/idBtnCal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/idBtnCal"
        app:layout_constraintTop_toBottomOf="@+id/idEtNum2"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/idBtnCal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sub"
        android:text="@string/sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/idBtnCal"
        app:layout_constraintTop_toBottomOf="@+id/idEtNum2"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/idBtnCal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multiply"
        android:text="@string/multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnCal"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/idBtnCal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="divide"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/idBtnCal4"
        app:layout_constraintTop_toBottomOf="@+id/idBtnCal2"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/idTvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnCal5"
        app:layout_constraintVertical_bias="0.100000024"
        tools:text="000" />

</androidx.constraintlayout.widget.ConstraintLayout>